--- a/config.toml
+++ b/config.toml
@@ -21,6 +21,11 @@ url = "/time-and-place"
 weight = 2
 
 [[menu.main]]
+name = "Schedule"
+url = "/schedule"
+weight = 3
+
+[[menu.main]]
 name = "About"
 url = "/about"
-weight = 3
+weight = 4
